pricing-card left-text(only visible lg) font, styles and spacing fixed

--- a/styles/02-base/_typo.scss
+++ b/styles/02-base/_typo.scss
@@ -610,6 +610,10 @@ h4 {
     @include font(inter, regular);
     font-weight: $bold;
   }
+
+  &__option {
+    @include font(inter, regular);
+  }
 }
 
 //  another components
